# omnect-ui-edge-module

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: omnect_device_service.rs
backend/src/backend/: client.rs  error.rs  http.rs  mod.rs  omnect_device_service.rs  web_service.rs
common/: Cargo.toml
common/src/model/: mod.rs  omnect_device_service.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
