[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-files = "0.6"
actix-web-lab = { version = "^0", features = ["spa"] }
env_logger = "0.8"
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] } # reqwest with JSON parsing support
log = "^0.4"
derive_more = "^0.99"
common = { path = "../common" }
