[package]
authors = ["omnect@conplement.de>"]
description = "xxxxx."
edition = "2021"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "backend"
readme = "README.md"
repository = "https://github.com/omnect/omnect-ui"
version = "0.1.0"

[dependencies]
actix-server = "2.3"
actix-web = "^4"
actix-files = "0.6"
anyhow = "1.0"
actix-web-lab = { version = "^0", features = ["spa"] }
env_logger = "0.8"
futures-util = "0.3"
http-body-util = { version = "0.1.0", default-features = false, features = [] }
hyper = { version = "1.2.0", default-features = false, features = ["client", "http1"] }
hyper-util = { version = "0.1.3", default-features = false, features = ["tokio"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
reqwest = { version = "0.12", features = ["json"] } # reqwest with JSON parsing support
log = "^0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
derive_more = "^0.99"
common = { path = "../common" }
thiserror = { version = "1.0.57", default-features = false, features = [] }
tokio = {version= "1", features = ["rt-multi-thread"]}
